# Store_Sales

./: .gitignore  Project.ipynb  README.md  pyproject.toml  test.py
notebooks/: EDA.ipynb  Modeling.ipynb  Project.ipynb  app.py  test_notebook.ipynb
src/: functions.py
src/modules/: functions.py
src/store_sales/: __init__.py  adding_features.py  cli.py  constants.py  functions.py  split_and_prepare.py  splitting_and_preparing_data.py  streamlit_app.py
