[tool.poetry]
name = "store-sales"
version = "0.1.0"
description = "This task is aimed at stores' sales prediction"
authors = ["Stas <Stas20042701@gmail.com@>"]
readme = "README.md"
packages = [{include = "modules", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12.3"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
matplotlib = "^3.8.4"
xgboost = "^2.0.3"
lightgbm = "^4.3.0"
plotly = "^5.22.0"
nbformat = "^5.10.4"
seaborn = "^0.13.2"
streamlit = "^1.35.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
